# Watermark.Win

./: .gitignore  .gitmodules  AGENTS.md  App.xaml  App.xaml.cs  CheckUpdate.xaml  Connections.cs  CreateImage.cs  ExifInfo.cs  Global.cs  JointWatermark.csproj  JointWatermark.sln  LICENSE  MainPage.xaml  MainPage.xaml.cs  MainView.razor  MainWindow.xaml  MainWindow.xaml.cs  README.md  THIRD-PARTY-NOTICES  Watermark.Win.csproj  Watermark.Win.sln  Watermark.sln  packages.config
.github/workflows/: cross-platform-ci.yml  deploy-markweb.yml  docker-image.yml
BlazorPages/: Design.razor  EditComponentDialog.razor  ExifConfig.razor  LoginDialog.razor  MainView.razor  MyTemplates.razor  SignUpDialog.razor  TemplatesMarket.razor
Class/: BottomProcessInstance.cs  CLIENT_VERSION.cs  CharacterWatermarkProperty.cs  CloudFont.cs  ConnectionMode.cs  CreateImage.cs  CustomizationComponent.cs  ExifConfigInfo.cs  ExifInfo.cs  GeneralWatermarkProperty.cs  GeneralWatermarkRowProperty.cs  Global.cs  IImageProcessingContextExt.cs  IWatermarkProperty.cs  ImageBackgroud.cs  ImageConfig.cs  ImageCornerRound.cs  ImageInstance.cs  ImageProperties.cs  ImageShadow.cs  ImageSharpImageSource.cs  ImagesHelper.cs  LeftTextList.cs  MainModel.cs  MyImages.cs  Photo.cs  SimpleCommand.cs  ValidationBase.cs  WatermarkDataSource.cs  WatermarkTemplates.cs
Enums/: ContentType.cs  DataSourceFrom.cs  Direction.cs  EdgeDistanceType.cs  ImageBackgroudType.cs  PhotoAlignment.cs  PositionBase.cs  RelativePositionMode.cs  WatermarkRange.cs
Interfaces/: ITemplate.cs
JointWatermark.Update/: App.xaml  App.xaml.cs  Connections.cs  JointWatermark.Update.csproj  Resources.Designer.cs  Resources.resx  Update.xaml  Update.xaml.cs
Models/: APIHelper.cs  CloudFont.cs  Connection.cs  ExifHelper.cs  Global.cs  IFooConverter.cs  IocHelper.cs  OpenWinHelper.cs  SimpleCommand.cs  WMContainer.cs  WatermarkHelper.cs
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Resources/: ExifConfig.json  UpdateLog.txt
Views/: CheckUpdate.xaml  CheckUpdate.xaml.cs  ConfigExif.xaml  ConfigExif.xaml.cs  DesignWin.xaml  Error.xaml  Error.xaml.cs  Export.xaml  Export.xaml.cs  ImportCloudIcon.xaml  ImportCloudIcon.xaml.cs  Loading.xaml  Loading.xaml.cs  LogoPage.xaml  LogoPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MessageBox.xaml  MessageBox.xaml.cs  Setting.xaml  Setting.xaml.cs  SplitImageConfig.xaml  SplitImageConfig.xaml.cs  TemplateConfig.xaml  TemplateConfig.xaml.cs  TemplateEditor.xaml  TemplateEditor.xaml.cs  TemplatesMarket.xaml  TemplatesMarket.xaml.cs  UpdateWin.xaml  UpdateWin.xaml.cs  UserGuide.xaml  UserGuide.xaml.cs  WatermarkConnectionConfig.xaml  WatermarkConnectionConfig.xaml.cs  WatermarkLogoConfig.xaml  WatermarkLogoConfig.xaml.cs  WatermarkRowConfig.xaml  (+3 more)
Watermark/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Routes.razor  Watermark.csproj  Watermark.sln  _Imports.razor
Watermark.Andorid/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  README.md  Routes.razor  Watermark - Backup.Andorid.csproj  Watermark.Andorid.csproj  _Imports.razor
Watermark.Andorid/BlazorPages/: DailyLogRecord.razor  Design.razor  EditComponentDialog.razor  ExifConfig.razor  ExifInfo.razor  FontsDialog.razor  IndexView.razor  Login.razor  LoginDialog.razor  LogoDialog.razor  MainView.razor  MyTemplates.razor  PreviewPage.razor  SettingPage.razor  SignUp.razor  SignUpDialog.razor  SignUpPage.razor  SplitPage.razor  SwiperTabItem.razor  SwiperTabItems.razor  TemplateLargeView.razor  TemplateMarket.razor  TemplateMarket.razor.css  TemplatesMarket.razor  TestView.razor  VipDialog.razor
Watermark.Andorid/Mobile/: ExportDialog.razor  MainView.razor  MainView.razor.css  MainViewOSX.razor  MainViewOSX.razor.css  (+2 more)
Watermark.Razor/: Common.cs  ExampleJsInterop.cs  Watermark.Razor.csproj  _Imports.razor
Watermark.Razor.Tests/: AdminDashboardSharedTests.cs  MacCanvasApplicationTests.cs  MacCanvasTransformTests.cs  MacColorPreviewTypesTests.cs  MacColorPreviewValidatorTests.cs  MacControlTreeTests.cs  MacDesignPreviewFallbackTests.cs  MacEditingSessionTests.cs  MacFullResolutionRenderServiceTests.cs  MacInspectorLocalizationTests.cs  MacMultiFrameWorkflowTests.cs  MacSliderTests.cs  MacTemplateEditorStateTests.cs  MacTemplateStoreTests.cs  MacWorkspaceCoordinatorTests.cs  WMApplicationMigrationTests.cs  WMApplicationStartupContractTests.cs  WMArtifactCacheTests.cs  WMCollageDerivedMediaProcessorTests.cs  WMColorPreviewPipelineTests.cs  WMCropGeometryTests.cs  WMCropPipelineTests.cs  WMDesktopWorkspaceContractTests.cs  WMImageImportServiceTests.cs  WMImagingCapabilityPolicyTests.cs  WMImagingRolloutBuildContractTests.cs  WMMembershipPaymentTests.cs  WMMobileWorkspaceDockContractTests.cs  WMMultiFramePanelContractTests.cs  WMObjectUrlRegistryTests.cs  WMRenderPlanCompilerTests.cs  WMSceneSurfaceTransportTests.cs  WMSharedCurveEditorContractTests.cs  WMStackPreviewCacheTests.cs  WMSystemBackDispatcherTests.cs  WMTemplateDesignerSessionTests.cs  WMTemplateEditorDraftTests.cs  WMTemplateExifReplayTests.cs  WMTemplateMarketPagingTests.cs  WMTemplateOperationProcessorTests.cs  (+11 more)
Watermark.Shared/: Watermark.Shared.csproj
Watermark.Web/: DEPLOYMENT.md  Program.cs  Watermark.Web.csproj  _Imports.razor
Watermark.Win/: App.xaml  App.xaml.cs  Watermark.Win.csproj  _Imports.razor
native/: NATIVE-BINARY-COMMIT.md  Watermark.Native.Host.Tests.targets  dependencies.lock.json
native/Watermark.Imaging.Native/: CMakeLists.txt  README.md
native/Watermark.Imaging.Native/include/: watermark_imaging.h
native/Watermark.Imaging.Native/src/: watermark_color_ocio.cpp  watermark_imaging.cpp  watermark_imaging_internal.h
native/Watermark.Imaging.Native/tests/: Program.cs  Watermark.Imaging.Native.Smoke.csproj  color_ocio.cpp  preview_pipeline.cpp  smoke.cpp  star_alignment.cpp  tiff16.cpp
native/cmake/pystring-static/: CMakeLists.txt
scripts/: build-android-release.sh  generate-phosphor-icons.mjs  phosphor-icons.txt
wwwroot/: index.html
(+574 files in other folders)
