cmake_minimum_required(VERSION 3.24)
project(WatermarkImagingNative VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
if(MSVC)
  # Standalone Windows packages must not require a separately installed VC++ runtime.
  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif()
set(WMI_LIBRAW_VERSION "0.22.1" CACHE STRING "Locked LibRaw version")
set(WMI_TIFF_VERSION "4.7.2" CACHE STRING "Locked LibTIFF version")
set(WMI_OCIO_VERSION "2.5.2" CACHE STRING "Locked OpenColorIO version")
option(WMI_ENABLE_LIBRAW "Build RAW support" ON)
option(WMI_ENABLE_TIFF "Build TIFF16 support" ON)
option(WMI_ENABLE_OCIO "Build OpenColorIO color processing support" ON)
set(WMI_LIBRAW_ROOT "" CACHE PATH "Path to a prebuilt, pinned LibRaw prefix")
set(WMI_OCIO_ROOT "" CACHE PATH "Path to a prebuilt, pinned OpenColorIO prefix")
set(WMI_LIBRARY_TYPE "" CACHE STRING "Override wrapper library type (STATIC or SHARED)")

if(NOT WMI_LIBRARY_TYPE)
  if(APPLE)
    set(WMI_LIBRARY_TYPE STATIC)
  else()
    set(WMI_LIBRARY_TYPE SHARED)
  endif()
endif()
if(NOT WMI_LIBRARY_TYPE MATCHES "^(STATIC|SHARED)$")
  message(FATAL_ERROR "WMI_LIBRARY_TYPE must be STATIC or SHARED")
endif()

add_library(watermark_imaging ${WMI_LIBRARY_TYPE}
  src/watermark_imaging.cpp
  src/watermark_color_ocio.cpp)
target_include_directories(watermark_imaging PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_definitions(watermark_imaging PRIVATE WMI_BUILDING_LIBRARY=1)

if(WMI_ENABLE_LIBRAW)
  if(WMI_LIBRAW_ROOT)
    set(_WMI_LIBRAW_INCLUDE "${WMI_LIBRAW_ROOT}/include")
    if(WIN32)
      set(_WMI_LIBRAW_LIBRARY "${WMI_LIBRAW_ROOT}/lib/libraw_static.lib")
    else()
      set(_WMI_LIBRAW_LIBRARY "${WMI_LIBRAW_ROOT}/lib/libraw_r.a")
    endif()
    if(NOT EXISTS "${_WMI_LIBRAW_INCLUDE}/libraw/libraw_version.h")
      message(FATAL_ERROR "LibRaw headers were not found under ${_WMI_LIBRAW_INCLUDE}")
    endif()
    if(NOT EXISTS "${_WMI_LIBRAW_LIBRARY}")
      message(FATAL_ERROR "LibRaw library was not found at ${_WMI_LIBRAW_LIBRARY}")
    endif()
    file(READ "${_WMI_LIBRAW_INCLUDE}/libraw/libraw_version.h" _WMI_LIBRAW_VERSION_HEADER)
    string(REGEX MATCH "#define[ \t]+LIBRAW_MAJOR_VERSION[ \t]+([0-9]+)" _WMI_MAJOR_MATCH "${_WMI_LIBRAW_VERSION_HEADER}")
    set(_WMI_LIBRAW_MAJOR "${CMAKE_MATCH_1}")
    string(REGEX MATCH "#define[ \t]+LIBRAW_MINOR_VERSION[ \t]+([0-9]+)" _WMI_MINOR_MATCH "${_WMI_LIBRAW_VERSION_HEADER}")
    set(_WMI_LIBRAW_MINOR "${CMAKE_MATCH_1}")
    string(REGEX MATCH "#define[ \t]+LIBRAW_PATCH_VERSION[ \t]+([0-9]+)" _WMI_PATCH_MATCH "${_WMI_LIBRAW_VERSION_HEADER}")
    set(_WMI_LIBRAW_PATCH "${CMAKE_MATCH_1}")
    set(_WMI_LIBRAW_ACTUAL_VERSION "${_WMI_LIBRAW_MAJOR}.${_WMI_LIBRAW_MINOR}.${_WMI_LIBRAW_PATCH}")
    if(NOT _WMI_LIBRAW_ACTUAL_VERSION STREQUAL WMI_LIBRAW_VERSION)
      message(FATAL_ERROR "Expected LibRaw ${WMI_LIBRAW_VERSION}; found ${_WMI_LIBRAW_ACTUAL_VERSION}")
    endif()
    add_library(wmi_libraw STATIC IMPORTED GLOBAL)
    set_target_properties(wmi_libraw PROPERTIES
      IMPORTED_LOCATION "${_WMI_LIBRAW_LIBRARY}"
      INTERFACE_INCLUDE_DIRECTORIES "${_WMI_LIBRAW_INCLUDE}")
    target_link_libraries(watermark_imaging PRIVATE wmi_libraw)
    if(WIN32)
      target_compile_definitions(watermark_imaging PRIVATE LIBRAW_NODLL=1)
    endif()
  else()
    find_package(LibRaw ${WMI_LIBRAW_VERSION} CONFIG REQUIRED)
    target_link_libraries(watermark_imaging PRIVATE LibRaw::raw)
  endif()
  target_compile_definitions(watermark_imaging PRIVATE WMI_HAS_LIBRAW=1)
endif()

if(WMI_ENABLE_TIFF)
  # The pinned static TIFF package exports ZLIB::ZLIB in its link interface.
  find_package(ZLIB REQUIRED)
  find_package(TIFF ${WMI_TIFF_VERSION} EXACT REQUIRED)
  target_link_libraries(watermark_imaging PRIVATE TIFF::TIFF)
  target_compile_definitions(watermark_imaging PRIVATE WMI_HAS_TIFF=1)
endif()

if(WMI_ENABLE_OCIO)
  if(WMI_OCIO_ROOT)
    list(PREPEND CMAKE_PREFIX_PATH "${WMI_OCIO_ROOT}")
  endif()
  find_package(OpenColorIO ${WMI_OCIO_VERSION} EXACT CONFIG REQUIRED)
  target_link_libraries(watermark_imaging PRIVATE OpenColorIO::OpenColorIO)
  target_compile_definitions(watermark_imaging PRIVATE WMI_HAS_OCIO=1)
endif()

if(MSVC)
  target_compile_options(watermark_imaging PRIVATE /W4 /permissive- /EHsc)
  set_target_properties(watermark_imaging PROPERTIES OUTPUT_NAME "Watermark.Imaging.Native")
else()
  target_compile_options(watermark_imaging PRIVATE -Wall -Wextra -Wpedantic -fvisibility=hidden)
  set_target_properties(watermark_imaging PROPERTIES OUTPUT_NAME "Watermark.Imaging.Native")
endif()

install(TARGETS watermark_imaging ARCHIVE DESTINATION lib LIBRARY DESTINATION lib RUNTIME DESTINATION bin)
install(FILES include/watermark_imaging.h DESTINATION include)

include(CTest)
if(BUILD_TESTING)
  add_executable(wmi_star_alignment_test tests/star_alignment.cpp)
  target_link_libraries(wmi_star_alignment_test PRIVATE watermark_imaging)
  add_test(NAME wmi_star_alignment COMMAND wmi_star_alignment_test)
  add_executable(wmi_preview_pipeline_test tests/preview_pipeline.cpp)
  target_link_libraries(wmi_preview_pipeline_test PRIVATE watermark_imaging)
  add_test(NAME wmi_preview_pipeline COMMAND wmi_preview_pipeline_test)
  add_executable(wmi_color_ocio_test tests/color_ocio.cpp)
  target_link_libraries(wmi_color_ocio_test PRIVATE watermark_imaging)
  add_test(NAME wmi_color_ocio COMMAND wmi_color_ocio_test)
  if(WMI_ENABLE_TIFF)
    add_executable(wmi_tiff16_test tests/tiff16.cpp)
    target_link_libraries(wmi_tiff16_test PRIVATE watermark_imaging TIFF::TIFF)
    add_test(NAME wmi_tiff16 COMMAND wmi_tiff16_test)
  endif()
endif()
